print-manager (4:4.11.3-2) UNRELEASED; urgency=low

  * 

 -- Maximiliano Curia <maxy@debian.org>  Wed, 13 Nov 2013 14:45:33 +0100

print-manager (4:4.11.3-1) unstable; urgency=low

  * New upstream release.
  * Update build dependencies.

 -- Maximiliano Curia <maxy@debian.org>  Sun, 10 Nov 2013 00:27:40 +0100

print-manager (4:4.11.2-1) experimental; urgency=low

  * New upstream release.

 -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Oct 2013 11:59:18 +0200

print-manager (4:4.10.5-1) unstable; urgency=low

  * New upstream release.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Fix typo in extended description of package. Thanks Filipus Klutiero
    (Closes: #712389).

 -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Jul 2013 16:38:05 +0200

print-manager (4:4.10.4-1) experimental; urgency=low

  * New upstream release.
  * Ignore lintian error about private library.
  * Bump debhelper build-dep and compat to 9.
  * Bump Standards-Version to 3.9.4.
  * Add myself to uploaders.
  * Update vcs fields.

 -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 19:46:38 +0200

print-manager (4:4.10.2-2) experimental; urgency=low

  [ Pino Toscano ]
  * Add Homepage, Vcs-Browser, and Vcs-Git headers.
  * Improve the descriptions.
  * Remove extra system-config-printer-udev recommend.

 -- Sune Vuorela <sune@debian.org>  Mon, 29 Apr 2013 01:57:14 +0200

print-manager (4:4.10.2-1) experimental; urgency=low

  [ Debian Qt/KDE Maintainers ]
  * Initial release.

  [ Sune Vuorela ]
  * Add myself to uploaders.

 -- Sune Vuorela <sune@debian.org>  Thu, 11 Apr 2013 22:02:27 +0000