@@ -1,0 +1,1 @@
+debian/02-add-print-manager.js /usr/share/kde4/apps/plasma-desktop/updates/
