@@ -1,6 +1,10 @@
 print-manager (4:4.11.3-2) UNRELEASED; urgency=low
 
-  * 
+  * Merge with ubuntu package:
+    + Add 02-add-print-manager.js to add applet to systray.
+    - Diverge on patch ignore_scp_dbus_failures.diff.
+    - Diverge on recommends system-config-printer-udev.
+  * Update copyright file.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 13 Nov 2013 14:45:33 +0100
 
